--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="popularity">🔥 Popularidad: %1$.2f</string>
     <string name="rating">⭐ %1$.2f (%2$d)</string>
 
+    <string name="back">Atrás</string>
+    <string name="start">Iniciar</string>
+    <string name="welcome_message">¡Bienvenido a Movie Finder!</string>
+
 </resources>
